--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<title>Prologue by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
+		<link rel="stylesheet" type="text/css" href="assets/css/base.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/layouts.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/modules.css" />
 	</head>
 	<body class="is-preload">
 
