added CDNs for libraries, customized social media links in header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/base.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/layouts.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/modules.css" />
+		<!-- browser.min.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-browser/0.1.0/jquery.browser.min.js"></script>
+		<!-- jQuery -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+		<!-- jquery.scrollex.js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollex/0.2.1/jquery.scrollex.js"></script>
+		<!-- jquery.scrolly.js -->
 		<script src="https://cdn.jsdelivr.net/npm/jquery.scrolly@0.0.1/jquery.scrolly.js"></script>
 	</head>
 	<body class="is-preload">
@@ -48,10 +52,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joepennock/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.instagram.com/pennockjoe/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/penjoe" class="icon fa-github"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -167,7 +170,7 @@
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
 									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
+										<textarea name="message" placeholder="Enter Message Here!"></textarea>
 									</div>
 									<div class="col-12">
 										<input type="submit" value="Send Message" />
